# trueid

./: .gitignore  .releaserc.json  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  release-plz.toml  release.toml
.github/workflows/: build.yml
crates/trueid-core/: Cargo.toml
crates/trueid-core/src/: lib.rs
crates/trueid-core/src/application/: app.rs  error.rs  mod.rs  pipeline.rs  verification_decision.rs
crates/trueid-core/src/domain/: embedding.rs  error.rs  face.rs  frame.rs  mod.rs  templates.rs  user.rs
crates/trueid-core/src/ports/: biometric.rs  embedder.rs  face_aligner.rs  face_detector.rs  face_embedder.rs  face_pose.rs  health.rs  liveness.rs  matcher.rs  mod.rs  template_store.rs  video.rs
crates/trueid-ctl/: Cargo.toml
crates/trueid-ctl/src/: main.rs  models.rs
crates/trueid-daemon/: .gitignore  Cargo.toml
crates/trueid-daemon/config/: config.yaml
crates/trueid-daemon/src/: config.rs  ipc.rs  main.rs
crates/trueid-daemon/src/adapters/: mod.rs
crates/trueid-daemon/src/adapters/face_aligner/: crop_bbox.rs  mod.rs  passthrough.rs
crates/trueid-daemon/src/adapters/face_detector/: full_frame.rs  mod.rs  onnx_yunet.rs
crates/trueid-daemon/src/adapters/face_embedder/: mod.rs  onnx.rs
crates/trueid-daemon/src/adapters/face_pose/: geometric_landmarks.rs  mod.rs  passthrough.rs
crates/trueid-daemon/src/adapters/health/: mod.rs
crates/trueid-daemon/src/adapters/liveness/: always_live.rs  mod.rs
crates/trueid-daemon/src/adapters/matcher/: cosine.rs  mod.rs
crates/trueid-daemon/src/adapters/template_store/: disk.rs  mod.rs
crates/trueid-daemon/src/adapters/video/: camera_capture.rs  mock.rs  mod.rs  v4l.rs
crates/trueid-daemon/tests/: yunet_shapes.rs
crates/trueid-ipc/: Cargo.toml
crates/trueid-ipc/src/: lib.rs
crates/trueid-pam/: Cargo.toml
crates/trueid-pam/src/: lib.rs
crates/trueidctl/: Cargo.toml
crates/trueidctl/src/: main.rs
crates/trueidd/: Cargo.toml
crates/trueidd/src/: ipc.rs  main.rs
crates/trueidd/src/adapters/: mod.rs  onnx_face.rs  v4l_video.rs
crates/trueidd/src/adapters/default/: biometric.rs  mod.rs
crates/trueidd/src/adapters/face_aligner/: passthrough.rs
crates/trueidd/src/adapters/face_detector/: full_frame.rs  mod.rs
crates/trueidd/src/adapters/face_embedder/: onnx.rs
crates/trueidd/src/adapters/file/: mod.rs  template_store.rs
crates/trueidd/src/adapters/health/: default.rs
crates/trueidd/src/adapters/liveness/: always_live.rs
crates/trueidd/src/adapters/matcher/: cosine.rs
crates/trueidd/src/adapters/memory/: mod.rs  template_store.rs
crates/trueidd/src/adapters/mock/: embedder.rs  face_embedder.rs  mod.rs  video.rs
crates/trueidd/src/adapters/onnx_face/: mod.rs
crates/trueidd/src/adapters/video/: mod.rs
docs/: architecture.md  developing.md  fedora.md  models.md
packaging/: trueid.service
policies/: trueid.te
scripts/: bump.sh  models.sh  postinst  postinst.sh  update-version.sh
