[workspace]
resolver = "3"
members = [
    "crates/trueid-daemon",
    "crates/trueid-ctl",
    "crates/trueid-core",
    "crates/trueid-ipc", "crates/trueid-pam",
]

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
tag-prefix = ""
publish = false
push = true
consolidate-commits = true
pre-release-commit-message = "chore(release): release {{version}}"
