[package]
name = "trueid-daemon"
version = "0.1.0"
edition = "2024"
description = "Biometric authentication daemon for TrueID"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
v4l = "0.14"
trueid-core = { path = "../trueid-core" }
trueid-ipc = { path = "../trueid-ipc" }
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
tract-onnx = "0.21.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.deb]
maintainer = "Adil Said <adilsaid64@gmail.com>"
depends = "$auto"

assets = [
    ["../../target/release/trueid-ctl", "usr/bin/trueid", "755"],
    ["../../target/release/trueid-daemon", "usr/bin/trueidd", "755"],
    ["../../packaging/trueid.service", "lib/systemd/system/trueid.service", "644"],
]


[package.metadata.rpm]
package = "trueid"
summary = "Biometric authentication daemon"
license = "MIT"

[package.metadata.rpm.targets]
trueid-daemon = { path = "target/release/trueid-daemon" }
trueid-ctl = { path = "target/release/trueid-ctl" }

[package.metadata.rpm.assets]
"../../target/release/trueid-ctl" = { path = "/usr/bin/trueid", mode = "755" }
"../../target/release/trueid-daemon" = { path = "/usr/bin/trueidd", mode = "755" }
"../../packaging/trueid.service" = { path = "/usr/lib/systemd/system/trueid.service", mode = "644" }

[package.metadata.rpm.scripts]
post_install = """
systemctl daemon-reexec || true
systemctl daemon-reload || true
systemctl enable trueid || true
systemctl start trueid || true
"""