[package]
name = "trueid-daemon"
version = "0.1.0"
edition = "2024"
description = "Biometric authentication daemon for TrueID"
license = "MIT"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
v4l = "0.14"
trueid-core = { path = "../trueid-core" }
trueid-ipc = { path = "../trueid-ipc" }
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
tract-onnx = "0.21.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9.34"

[package.metadata.deb]
maintainer = "Adil Said <adilsaid64@gmail.com>"
depends = "$auto"

assets = [
    ["../../target/release/trueid-ctl", "usr/bin/trueid-ctl", "755"],
    ["../../target/release/trueid-daemon", "usr/bin/trueid-daemon", "755"],
    ["../../target/release/libtrueid_pam.so", "usr/lib/security/pam_trueid.so", "755"],
    ["../../packaging/trueid.service", "lib/systemd/system/trueid.service", "644"],
    ["config/config.yaml", "/etc/trueid/config.yaml", "644"]
]

[package.metadata.generate-rpm]
name = "trueid"
summary = "Biometric authentication daemon"

assets = [
  { source = "../../target/release/trueid-daemon", dest = "/usr/bin/trueid-daemon", mode = "755" },
  { source = "../../target/release/trueid-ctl", dest = "/usr/bin/trueid-ctl", mode = "755" },
  { source = "../../target/release/libtrueid_pam.so", dest = "/usr/lib64/security/pam_trueid.so", mode = "755" },
  { source = "../../packaging/trueid.service", dest = "/usr/lib/systemd/system/trueid.service", mode = "644" },
  { source = "config/config.yaml", dest = "/etc/trueid/config.yaml", mode = "644" }
]

post_install_script = """
mkdir -p /etc/trueid
systemctl daemon-reexec || true
systemctl daemon-reload || true
systemctl enable trueid || true
systemctl start trueid || true
"""
